Se implemento el ViewPanel en todas las clases, se agrego entradas falta pulir al guardar una compra se guarde sus detalles, mejorar los combospara que carguen objetos implementado en productosPanel