@@ -1,6 +1,7 @@
 package sistemainventario.mappers;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import sistemainventario.dto.RolDTO;
 import sistemainventario.entity.Rol;
 
@@ -34,7 +35,7 @@ public class RolMapper implements IMapper<Rol, RolDTO>{
         return entities
                  .stream()
                  .map(this::toDTO)
-                 .toList();
+                 .collect(Collectors.toList());
     }
 
     @Override
@@ -42,6 +43,6 @@ public class RolMapper implements IMapper<Rol, RolDTO>{
         return dtos
                  .stream()
                  .map(this::toEntity)
-                 .toList();
+                 .collect(Collectors.toList());
     }
 }
